fixed footer and basket alignment on mobile

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -48,8 +48,11 @@ a {
 
 /* Small Screens Settings */
  @media (max-width: 768px) {
-    .menu{
+    .menu,
+    .basket,
+    .footer{
         flex-direction: column;
+        align-items: center;
     }
     .menu-image-container {
         width: 100%;
